- Bracket matching tweak (Alexander Maryanovsky)
- Plugin manager window can be closed by pressing Escape now
- Fixed indentation of constructs like:
  if(foo)
    bar();
  baz();
  in Java/C/C++/etc modes (Alexander Maryanovsky)
- Improved loading time of plain text files if 'more accurate syntax
  highlighting' is on
- Open buffers are shown with a different icon in the file system
  browser

+ Bug Fixes

- Select Open File; press Enter first; then choose a file to open. Bang,
  an error message. Now fixed
- Fixed a bug in the undo code that would occur sometimes when multiple
  removes were performed in a row
- If the splash screen was disabled, running jEdit with the -nogui and
  -nobackground command line arguments didn't work
- When using the FTP plugin, renaming a file did not reload the
  directory
- Triple-clicking on the last line of a file caused problems
- When closing a file with unsaved changes, the file will stay open if
  the save failed. Previously it would be closed and the unsaved changes
  would be lost forever
- If 'Keep Dialog' was off, the search dialog would close, even after an
  unsuccessful HyperSearch. This was inconsistent with the bahavior for
  normal searches, where an unsuccessful match did not close the dialog
  (so you could correct the search string easier)
- One of the tips of the day referred to an invalid URL
- Previously, the filesystem browser opens the clicked directory if
  clickCount == 2. This doesn't work if you double click once and then
  immediate double click again on a directory (or a file) at the same
  physical location, because the 2nd double click is reported with a
  click count of 3 and 4 (Alexander Maryanovsky)
- The 'initially collapse folds with level' setting is how honored when
  reloading files
- A few printing bugs fixed (Thomas Dilts)
- The help viewer should no longer open behind the view when jEdit is
  run for the first time on some Java implementations

+ API Changes
